# mom6-cmake

./: .gitmodules  CMakeLists.txt  README.md
MOM6/: CMakeLists.txt
SIS2/: CMakeLists.txt
atmos_null/: CMakeLists.txt
coupler/: CMakeLists.txt
ice_param/: CMakeLists.txt
icebergs/: CMakeLists.txt
land_null/: CMakeLists.txt
